components/09-router/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-service
  namespace: ${NS_SERVICES}
  labels:
    app: router-service
spec:
  type: ClusterIP
  selector:
    app: router-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
