components/09-router/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: router-service
  namespace: ${NS_SERVICES}
spec:
  to:
    kind: Service
    name: router-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
